--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.anand.upiqr">
 
+    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UPIQR">
+        <activity
+            android:name=".Activity.TransactionHistoryActivity"
+            android:exported="true" />
         <activity
             android:name=".Activity.RegisterActivity"
             android:exported="true" />
@@ -23,14 +27,13 @@
         </activity>
         <activity
             android:name=".ui.login.LoginActivity"
-            android:exported="true"
-            android:label="@string/title_activity_login" />
+            android:exported="true" />
         <activity
             android:name=".Activity.QR_Activity"
             android:exported="false" />
         <activity
             android:name=".Activity.MainActivity"
-            android:exported="true"/>
+            android:exported="true" />
     </application>
 
 </manifest>
